10-secrets/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: secrets-example
  namespace: codeweek
spec:
  ports:
    - port: 80
      name: http
  selector:
    app: secrets-example
  type: ClusterIP
